fixing the submit button on safari

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -65,6 +65,7 @@
     display: inline-block;
     border: none;
     text-align: center;
+    -webkit-appearance: none;
 }
 
 .btn:hover{
